Minimum viable change to stream canned data for PM simulator.

--- a/Common/Deployment/ConfigurationTemplate.config
+++ b/Common/Deployment/ConfigurationTemplate.config
@@ -30,4 +30,7 @@
   <setting name="RulesEventHubConnectionString" value="--temp-placeholder--" />
   <!-- Map Api -->
   <setting name="MapApiQueryKey" value="" />
+  <!-- Simulator Data Storage -->
+  <setting name="SimulatorDataFileName" value="" />
+  <setting name="SimulatorDataContainer" value="" />
 </Environment>
