--- a/Simulator/Simulator.WebJob/app.config
+++ b/Simulator/Simulator.WebJob/app.config
@@ -40,6 +40,8 @@
     <add key="AsaRefDataRulesBlobName" value="devicerules.json" />
     <add key="DevicePollIntervalSeconds" value="20" />
     <add key="UseConfigForDeviceList" value="False" />
+    <add key="SimulatorDataFileName" value="config:SimulatorDataFileName" />
+    <add key="SimulatorDataContainer" value="config:SimulatorDataContainer" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
