--- a/WebJobHost/App.config
+++ b/WebJobHost/App.config
@@ -22,5 +22,7 @@
     <add key="AsaRefDataRulesBlobName" value="devicerules.json" />
     <add key="DevicePollIntervalSeconds" value="20" />
     <add key="UseConfigForDeviceList" value="False" />
+    <add key="SimulatorDataFileName" value="config:SimulatorDataFileName" />
+    <add key="SimulatorDataContainer" value="config:SimulatorDataContainer" />
   </appSettings>
 </configuration>
